Kubernetes/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: miniredis-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: miniredis-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5500
          startupProbe:
            tcpSocket:
              port: 5500
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 24
          readinessProbe:
            tcpSocket:
              port: 5500
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 5500
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: miniredis-dev
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5500
      targetPort: 5500
