Kubernetes/monitoring-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-service
  namespace: miniredis-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitoring-service
  template:
    metadata:
      labels:
        app: monitoring-service
    spec:
      containers:
        - name: monitoring-service
          image: miniredis-monitoring:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-service
  namespace: miniredis-dev
spec:
  type: ClusterIP
  selector:
    app: monitoring-service
  ports:
    - port: 9000
      targetPort: 9000
