Kubernetes/node.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-manager
  namespace: miniredis-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-manager
  template:
    metadata:
      labels:
        app: node-manager
    spec:
      containers:
        - name: node-manager
          image: miniredis-node-manager:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7000
          securityContext:
            privileged: true
          volumeMounts:
            - name: docker-sock
              mountPath: /var/run/docker.sock
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: Socket
---
apiVersion: v1
kind: Service
metadata:
  name: node-manager
  namespace: miniredis-dev
spec:
  type: ClusterIP
  selector:
    app: node-manager
  ports:
    - port: 7000
      targetPort: 7000
