Kubernetes/postgres-auth.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth
  namespace: miniredis-dev
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-auth
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-auth
  namespace: miniredis-dev
spec:
  serviceName: postgres-auth
  replicas: 1
  selector:
    matchLabels:
      app: postgres-auth
  template:
    metadata:
      labels:
        app: postgres-auth
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 3Gi
